GET one dynamic table routes
