# api/custom/routes/table-routes.js
@@ -4,6 +4,9 @@ var visstaUtil = require('../util/vissta-auth-util');
 var CustomError = require('../../../util/error');
 var visstaAuth = require('./../middlewares/vissta-auth-middleware');
 
+/**
+ * Dynamically get all records from table
+ */
 router.get('/:table', [visstaAuth()], function (req, res, next) {
 
     var table = req.params.table;
@@ -22,8 +25,46 @@ router.get('/:table', [visstaAuth()], function (req, res, next) {
             db.manyOrNone(sql, [table, columns])
                 .then(function (results) {
                     var returnObj = JSON.parse(results[0].___select_all);
-                    // remove any encrypted passwords
-                    returnObj.map(function(o){delete o.password;return o;});
+                    res.status(200).json(returnObj);
+                })
+                .catch(function (error) {
+                    return next(error)
+                });
+
+        } else {
+            // it is, so require the endpoint file
+            require('./' + table).init(req, res, next);
+        }
+    } else {
+        next(new CustomError("The user is not authorized to make the request.", 401));
+    }
+
+});
+
+/**
+ * Dynamically get one table record
+ */
+router.get('/:table/:id', [visstaAuth()], function (req, res, next) {
+
+    var table = req.params.table;
+    var recordId = req.params.id;
+    var columns = req.query.columns || null;
+    var user = req.user;
+
+    if (req.user.role === "admin") {
+
+        req.sanitizeParams('id').toInt();
+
+        // Check if table/view is listen under "customRoutes"
+        if (!visstaUtil.isCustomRoute(table)) {
+
+            var db = pgb.getDatabase();
+            var sql = "SELECT * FROM ___select_one($1, $2, $3)";
+
+            // Request data from the database
+            db.manyOrNone(sql, [table, columns, recordId])
+                .then(function (results) {
+                    var returnObj = JSON.parse(results[0].___select_one);
                     res.status(200).json(returnObj);
                 })
                 .catch(function (error) {
